# tradestack

./: .clang-format  .gitignore  CMakeLists.txt  Jenkinsfile  README.md  fmt.sh  run.sh
docs/: DEVLOG.md  GLOSSARY.md  TODO.md
header/: price_level_node.hpp
include/: ask_tree.hpp  avl_tree.hpp  event_bus.hpp  instrument.hpp  manager.hpp  network.hpp  notifier.hpp  order.hpp  price_level_node.hpp  price_level_tree.hpp  side_tree.hpp
include/utils/: id_generator.hpp  print_utils.hpp  string.hpp  time.hpp
scripts/: build.sh  fmt.sh  run.sh  run_tests.sh
src/: avl_tree.cpp  instrument.cpp  main.cpp  manager.cpp  network.cpp  notifier.cpp  order.cpp  processors.cpp  side_tree.cpp  side_tree_factory.cpp
src/utils/: id_generator.cpp
tests/: CMakeLists.txt  avl_tree.cpp  order_test.cpp  side_tree.cpp
